# altinet

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  docker-compose.dev.yml  install.sh  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
altinet_backend/: __init__.py  settings.py
assets/calibration/: sample_room.json
assets/floorplans/: floorplan.json
assets/models/: README.md
backend/: manage.py
backend/altinet_backend/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/llm/: __init__.py  apps.py  serializers.py  services.py  urls.py  views.py
backend/spaces/: admin.py  apps.py  auth_views.py  authentication.py  consumers.py  encryption.py  event_views.py  events.py  fields.py  floorplan.py  models.py  ros_bridge.py  routing.py  serializers.py  urls.py  views.py
backend/web/: __init__.py  forms.py  models.py  urls.py  views.py  weather.py
docs/: ARCHITECTURE.md  index.md
docs/ADRs/: 0001-detection-and-tracking.md
docs/api/: altinet_nodes_detector_node.md  altinet_nodes_event_manager_node.md  altinet_nodes_lighting_control_node.md  altinet_nodes_ros2_django_bridge_node.md  altinet_nodes_tracker_node.md  altinet_nodes_visualizer_node.md  altinet_utils_geometry.md  altinet_utils_models.md  altinet_utils_tracking.md
docs/workflows/: floorplan_pipeline.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
ros2_ws/src/altinet/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/altinet/altinet/: __init__.py
ros2_ws/src/altinet/altinet/config/: cameras.yaml  event_rules.yaml  face.yaml  privacy.yaml  tracker.yaml  yolo.yaml
ros2_ws/src/altinet/altinet/dashboards/: floorplan_adapter.py
ros2_ws/src/altinet/altinet/drivers/: lights.py
ros2_ws/src/altinet/altinet/launch/: altinet_full_system.launch.py  altinet_per_room.launch.py
ros2_ws/src/altinet/altinet/msg/: __init__.py
ros2_ws/src/altinet/altinet/msgs/: PersonDetection.msg  PersonDetections.msg  PersonTracks.msg
ros2_ws/src/altinet/altinet/nodes/: camera_node.py  camera_viewer_node.py  detector_node.py  event_manager_node.py  face_capture_node.py  face_enroller_node.py  identity_node.py  lighting_control_node.py  ros2_django_bridge_node.py  speech_to_text_node.py  tracker_node.py  visualizer_node.py
ros2_ws/src/altinet/altinet/services/: __init__.py  face_recognition.py
ros2_ws/src/altinet/altinet/srv/: __init__.py
ros2_ws/src/altinet/altinet/tests/: conftest.py  test_bridge.py  test_context_manager.py  test_detector.py  test_event_manager.py  test_face.py  test_face_capture.py  test_face_service.py  test_identity.py  test_lighting_control.py  test_scene_monitor.py  test_tracker.py  test_visualizer.py
ros2_ws/src/altinet/altinet/utils/: config.py  context.py  face.py  face_capture.py  face_identity.py  geometry.py  identity.py  models.py  ros_conversions.py  scene_monitor.py  tracking.py  types.py
ros2_ws/src/altinet/scripts/: camera_node  camera_viewer_node  detector_node  event_manager_node  face_capture_node  identity_node  lighting_control_node  ros2_django_bridge_node  tracker_node  visualizer_node
ros2_ws/src/altinet_interfaces/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/altinet_interfaces/altinet_interfaces/: __init__.py
ros2_ws/src/altinet_interfaces/msg/: Event.msg  FaceSnapshot.msg  FaceSnapshots.msg  PersonDetection.msg  PersonTrack.msg  RoomPresence.msg
ros2_ws/src/altinet_interfaces/resource/: altinet_interfaces
ros2_ws/src/altinet_interfaces/srv/: CheckPersonIdentity.srv  ManualLightOverride.srv  RequestFaceSnapshot.srv
scripts/: add_user.py  generate_api_docs.py  generate_floorplan.py  run_demo.py
tests/: conftest.py  django_settings.py  test_add_user_script.py  test_camera_viewer_node.py  test_face_detector_node.py  test_face_identifier_node.py  test_face_recognition_service.py  test_face_tracker.py  test_llm_service.py  test_map_store.py  test_memory.py  test_person_tracker.py  test_placeholder.py  test_speech_service.py
(+101 files in other folders)
