<?xml version="1.0"?>
<package format="3">
  <name>altinet_interfaces</name>
  <version>0.2.0</version>
  <description>Message and service definitions for the Altinet perception stack.</description>
  <maintainer email="maintainer@example.com">Altinet Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>python3-empy</build_depend>
  <build_depend>python3-lark</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>python3-lark</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
